--- a/Admin/admin.css
+++ b/Admin/admin.css
@@ -975,3 +975,122 @@ select {
 .xuhuongchuyencan-table tr:hover {
   background: #f9f9f9;
 }
+
+/* Overlay nền mờ */
+.overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.4);
+  display: none;
+  z-index: 10;
+}
+
+/* Modal */
+.modal {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 450px;
+  background: #fff;
+  border-radius: 15px;
+  box-shadow: 0 4px 20px rgba(0, 0, 0, 0.25);
+  padding: 25px 35px;
+  display: none;
+  z-index: 20;
+}
+
+/* Header */
+.modal-header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.modal-header h2 {
+  font-size: 20px;
+  font-weight: 700;
+  color: #111;
+}
+
+.modal-desc {
+  font-size: 14px;
+  color: #888;
+  margin-top: -10px;
+  margin-bottom: 20px;
+}
+
+.close-btn {
+  font-size: 22px;
+  cursor: pointer;
+  color: #666;
+  transition: 0.2s;
+}
+.close-btn:hover {
+  color: #000;
+}
+
+/* Form */
+.student-form {
+  margin-top: 38px;
+  display: flex;
+  flex-direction: column;
+  gap: 14px;
+}
+
+.form-group {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.form-group label {
+  width: 120px;
+  font-weight: 500;
+  color: #222;
+  font-size: 15px;
+}
+
+.form-group input,
+.form-group select {
+  flex: 1;
+  padding: 8px 12px;
+  background: #f6f6f6;
+  border: none;
+  border-radius: 10px;
+  font-size: 15px;
+  outline: none;
+}
+.form-group select {
+  color: rgb(91, 91, 91);
+}
+
+.form-group input:focus,
+.form-group select:focus {
+  background: #efefef;
+}
+
+/* Nút thêm mới */
+.form-footer {
+  display: flex;
+  justify-content: flex-end;
+  margin-top: 15px;
+}
+
+.submit-btn {
+  background-color: #000;
+  color: white;
+  border: none;
+  padding: 10px 24px;
+  border-radius: 10px;
+  font-size: 15px;
+  cursor: pointer;
+  transition: 0.2s;
+}
+
+.submit-btn:hover {
+  background-color: #222;
+}
