--- a/Giaovien/styleGV.css
+++ b/Giaovien/styleGV.css
@@ -228,7 +228,7 @@
     padding-right: 20px;
 }
 /*----------------------BODyDD---------------------*/
-/*----------------------CHon Thong Tin---------------------*/
+/*----------------------CHon Thong Tin DD---------------------*/
 #ChonLop{
     margin-top: 20px;
     display: flex;
@@ -305,4 +305,80 @@
 .btnDDDiMuon ,.btnDDVangMat, .btnDDComat{
     background-color: transparent;
     cursor: pointer;
+}
+
+/*----------------------Suc Khoe---------------------*/
+/*----------------------headerSK---------------------*/
+#SucKhoe{
+    height: 100%;
+    width: 97%;
+    border-radius: 15px ;
+    box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+    margin-top: 40px;
+    padding-left: 20px;
+    padding-top: 10px;
+    padding-right: 20px;
+}
+/*----------------------BodySK---------------------*/   
+/*----------------------CHon Thong Tin SK---------------------*/
+#ChonLopSK{
+    margin-top: 20px;
+    display: flex;
+    justify-content: space-around;
+    height: 20%;
+}
+#LopSK,#chonNgaySK{
+    height: 20%;
+    width: 100%;
+    border-radius: 7px;
+}
+#chonLopHocSK,#NgaySK{
+    height: 100%;
+    width: 100%;
+    border-radius: 7px;
+}
+#ThemGhichuSK{
+    height: 20%;
+    width: 30%;
+    border-radius: 7px;
+    margin-top: 18px;
+    background-color: black;
+    color: white;
+    cursor: pointer;
+}
+/*----------------------Thong So SK---------------------*/
+#TSSucKhoe{
+    display: flex;
+    justify-content: space-between;
+    height: 20%;
+    width: 100%;
+    margin-top: -70px;
+}
+#AnDuSK, #ChuYSK, #KhoeManhSK, #TQSucKhoe{
+    border-radius: 15px;
+    text-align: center;
+    width: 23%;
+    box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+    height: 100%;
+}
+/*----------------------Danh Sach Suc Khoe---------------------*/
+#DanhsachSK{
+    margin-top: 20px;
+    height: 50%;
+    width: 100%;
+    border-radius: 15px ;
+    box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+    
+}
+#DanhsachSK table{
+    padding: 2px;
+    width: 100%;
+    height: 10%;
+}
+#DanhsachSK table td, th{
+    margin-left: 2px;
+    padding: 2px;
+    border-bottom: 2px solid black;
+    width: 15%;
+    justify-content: space-between;
 }
