--- a/Admin/admin.css
+++ b/Admin/admin.css
@@ -1110,7 +1110,7 @@ select {
   background-color: #222;
 }
 
-.overplayclass {
+.overlayclass {
   position: fixed;
   top: 0;
   left: 0;
@@ -1150,5 +1150,92 @@ select {
   font-weight: 500;
 }
 .submitClassUpdate-btn:hover {
+  background: #333;
+}
+
+.overlayteacher {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.4);
+  display: none;
+  z-index: 10;
+}
+.teacher-form {
+  margin-top: 38px;
+  display: flex;
+  flex-direction: column;
+  gap: 14px;
+}
+.submitTeacher-btn {
+  background: #000;
+  color: #fff;
+  border: none;
+  padding: 8px 16px;
+  border-radius: 8px;
+  cursor: pointer;
+  font-weight: 500;
+}
+.submitTeacher-btn:hover {
+  background: #333;
+}
+.teacher-form .form-group {
+  display: flex;
+  margin-bottom: 15px;
+}
+
+.teacher-form label {
+  flex: 0 0 120px;
+  font-weight: 500;
+  color: #222;
+}
+
+.teacher-form input[type="text"],
+.teacher-form input[type="email"],
+.teacher-form select {
+  flex: 1;
+  padding: 8px 10px;
+  border: none;
+  border-radius: 8px;
+  background: #f2f2f2;
+  font-size: 14px;
+}
+
+.teacher-form select {
+  cursor: pointer;
+}
+
+/* Checkbox group */
+.checkbox-group {
+  display: grid;
+  grid-template-columns: repeat(3, auto);
+  gap: 8px 10px;
+}
+
+.checkbox-group label {
+  font-size: 14px;
+  color: #222;
+}
+
+input[type="checkbox"] {
+  transform: scale(1.2);
+  margin-right: 2px;
+}
+
+#checkbox-chunhiem {
+  margin-left: -305px;
+}
+.submitTeacherUpdate-btn {
+  background: #000;
+  color: #fff;
+  border: none;
+  padding: 8px 16px;
+  border-radius: 8px;
+  cursor: pointer;
+  font-weight: 500;
+}
+.submitTeacherUpdate-btn:hover {
   background: #333;
 }
