--- a/Admin/admin.css
+++ b/Admin/admin.css
@@ -1239,3 +1239,73 @@ input[type="checkbox"] {
 .submitTeacherUpdate-btn:hover {
   background: #333;
 }
+.overlayevent {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.4);
+  display: none;
+  z-index: 10;
+}
+
+.event-form {
+  margin-top: 38px;
+  display: flex;
+  flex-direction: column;
+  gap: 14px;
+}
+.addEvent-btn {
+  background: #000;
+  color: #fff;
+  border: none;
+  padding: 8px 16px;
+  border-radius: 8px;
+  cursor: pointer;
+  font-weight: 500;
+}
+.addEvent-btn:hover {
+  background: #333;
+}
+
+.event-form input[type="text"],
+.event-form textarea {
+  width: 100%;
+  padding: 10px 12px;
+  border: none;
+  border-radius: 8px;
+  background: #f3f3f3;
+  outline: none;
+  margin-bottom: 15px;
+  font-size: 14px;
+}
+.event-form textarea {
+  width: 68%;
+}
+.event-form textarea {
+  resize: none;
+}
+.event-type {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 6px 25px;
+  margin-bottom: 10px;
+  font-size: 14px;
+  margin-right: 130px;
+}
+.event-type div {
+  gap: 6px;
+}
+.addEventUpdate-btn {
+  background: #000;
+  color: #fff;
+  border: none;
+  padding: 8px 16px;
+  border-radius: 8px;
+  cursor: pointer;
+  font-weight: 500;
+}
+.addEventUpdate-btn:hover {
+  background: #333;
+}
