--- a/Admin/admin.css
+++ b/Admin/admin.css
@@ -564,7 +564,7 @@ select {
   width: 25px;
 }
 .tag.green {
-  background: #f3e5f5;
+  background: #ffffff;
   color: #19ce6a;
   border: 1px solid #ddd;
   width: 43px;
