--- a/Giaovien/styleGV.css
+++ b/Giaovien/styleGV.css
@@ -604,7 +604,7 @@
     text-align: center;
 }
 /*----------------------btn nhập điểm---------------------*/
-#CuaSoNĐS{
+#CuaSoNĐS,#CuaSoNĐSSUA {
     position: absolute;
     top: 50%;
     left: 50%;
@@ -618,23 +618,23 @@
     width: 30%;
     font-size: 12pt;
 }
-#CuaSoNĐS > div {
+#CuaSoNĐS > div,#CuaSoNĐSSUA > div  {
     margin-top: 15px;
 }
-#CuaSoNĐS > div >span {
+#CuaSoNĐS > div >span,#CuaSoNĐSSUA > div >span {
     font-weight: bold;
 }
-#chonHocSinhGhiChuDS{
+#chonHocSinhGhiChuDS,#chonHocSinhGhiChuDSSUA {
     margin-left: 25px;
     height: 30px;
     width: 80%;
     border-radius: 7px;
 }
-#CuaSoNĐS input[type="radio"]{
+#CuaSoNĐS input[type="radio"],  #CuaSoNĐSSUA input[type="radio"]{
     transform: scale(1.5);
     margin-left: 30px;
 }
-#btncuasoTGCDS{
+#btncuasoTGCDS,#btncuasoTGCDSSUA{
     margin-top: 20px;
     height:40px;
     width:30%;
@@ -650,13 +650,13 @@
     padding-right: 20px;  
 
 }
-#txtDiemSODS{
+#txtDiemSODS,#txtDiemSODSSUA{
     margin-left: 35px;
     height: 30px;
     width: 80%;
     border-radius: 7px;
 }
-#NhanxetblDS{
+#NhanxetblDS,#NhanxetblDSSUA{
     margin-left: 28px;
     height: 60px;
     width: 80%;
