--- a/Admin/admin.css
+++ b/Admin/admin.css
@@ -1295,6 +1295,66 @@ select {
   background-color: #222;
 }
 
+.overlaySchedule {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.4);
+  display: none;
+  z-index: 10;
+}
+
+/* Modal */
+.modal {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 450px;
+  background: #fff;
+  border-radius: 15px;
+  box-shadow: 0 4px 20px rgba(0, 0, 0, 0.25);
+  padding: 25px 35px;
+  display: none;
+  z-index: 20;
+}
+.schedule-form {
+  margin-top: 38px;
+  display: flex;
+  flex-direction: column;
+  gap: 14px;
+}
+.submitSchedule-btn {
+  background-color: #000;
+  color: white;
+  border: none;
+  padding: 10px 24px;
+  border-radius: 10px;
+  font-size: 15px;
+  cursor: pointer;
+  transition: 0.2s;
+}
+
+.submitSchedule-btn:hover {
+  background-color: #222;
+}
+.submitScheduleUpdate-btn {
+  background-color: #000;
+  color: white;
+  border: none;
+  padding: 10px 24px;
+  border-radius: 10px;
+  font-size: 15px;
+  cursor: pointer;
+  transition: 0.2s;
+}
+
+.submitScheduleUpdate-btn:hover {
+  background-color: #222;
+}
+
 .overlayclass {
   position: fixed;
   top: 0;
